[package]
name = "mls_mpm"
version = "0.1.0"
authors = ["David Smoker <dsmoker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.12.0"

[dev-dependencies]
criterion = "0.3"
itertools = "0.10.0"

[[bench]]
name = "benchmark_sim"
harness = false
