[package]
name = "viewer"
version = "0.1.0"
authors = ["David Smoker <dsmoker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
kiss3d = "0.29.0"
mls_mpm = { path = "../mls_mpm" }
nalgebra = "0.24.1"
rand = "0.7"